content/v1.4.x/how-to-guides/index.md
---
title: How-to Guides
slug: /how-to-guides
description: Get a complete overview of the features in OpenMetadata from our How-to Guides.
---

# How-to Guides

The How-to Guides will give you a walk through on accomplishing the basic to the most advanced things in OpenMetadata. These step-by-step guides will help get an overview of the features and also help explore the various functionalities.  

## Features in OpenMetadata

OpenMetadata is a complete package for data teams to break down team silos, share data assets from multiple sources securely, collaborate around reliable data, and build a documentation-first data culture in the organization.

{% tilesContainer %}
{% tile
    title="Data Discovery"
    description="Discover the right data assets to make timely business decisions."
    link="/how-to-guides/data-discovery"
    icon="discovery"
/%}
{% tile
    title="Data Collaboration"
    description="Foster data team collaboration to enhance data understanding."
    link="/how-to-guides/data-collaboration"
    icon="collaboration"
/%}
{% tile
    title="Data Quality & Profiler"
    description="Trust your data with quality tests that ensure freshness, & accuracy."
    link="/how-to-guides/data-quality-profiler"
    icon="quality"
/%}
{% tile
    title="Data Lineage"
    description="Trace the path of data across tables, pipelines, and dashboards."
    link="/how-to-guides/data-lineage"
    icon="lineage"
/%}
{% tile
    title="Data Insights"
    description="Define KPIs and set goals to proactively hone the data culture of your company."
    link="/how-to-guides/data-insights"
    icon="discovery"
/%}
{% tile
    title="Data Governance"
    description="Enhance your data platform governance using OpenMetadata."
    link="/how-to-guides/data-governance"
    icon="governance"
/%}
{% /tilesContainer %}

## Quick Start Guides

{% tilesContainer %}
{% tile
    title="Admin Guide"
    description="Admin users can get started with OpenMetadata with just three quick and easy steps & know-it-all with the advanced guides."
    link="/how-to-guides/admin-guide"
    icon="administration"
/%}
{% tile
    title="Guide for Data Users"
    description="Get to know the basics of OpenMetadata and about the data assets that you can explore in the all-in-one platform."
    link="/how-to-guides/guide-for-data-users"
    icon="steward"
/%}
{% /tilesContainer %}

## How OpenMetadata helps Data Teams?

OpenMetadata is a complete package for data teams to break down team silos, share data assets from multiple sources securely, collaborate around data, and build a documentation-first data culture in the organization.

{% note %}

- Centralized, **Single Source of Truth** for all your metadata.

- **[Discover](/how-to-guides/data-discovery)** the right assets in time and reduce dependencies.

- Foster **[Team Collaboration](/how-to-guides/data-collaboration)** with conversations, tasks, announcements, and alerts in real time.

- Build trust in your data with **[Data Quality Tests](/how-to-guides/data-quality-profiler)** to ensure completeness and accuracy.

- Track your data evolution with end-to-end **[Data Lineage](/how-to-guides/data-lineage)**.

- Secure access to sensitive data by defining **[Roles and Policies](/how-to-guides/admin-guide/roles-policies)**.

- Enhance organizational **[Data Culture](/how-to-guides/data-insights)** to gain crucial insights to drive innovation.

- Define your **[Glossary](/how-to-guides/data-governance/glossary)** to build a common understanding of terms within your organization.

- Implement **[Data Governance](/how-to-guides/data-governance)** to maintain data integrity, security, and compliance.

{% /note %}
