content/v1.11.x-SNAPSHOT/how-to-guides/index.md
---
title: How-to Guides | Official Documentation to User Guides
description: Step-by-step guidance for how to guides using Collate. Learn key actions, features, and best practices.
slug: /how-to-guides
---

# How-to Guides

The How-to Guides will give you a walk through on accomplishing the basic to the most advanced things in {% collateContent %}Collate{% /collateContent %}{% ossContent %}OpenMetadata{% /ossContent %}. These step-by-step guides will help get an overview of the features and also help explore the various functionalities.  

## Agentic Metadata Management
Use LLMs and GenAI agents for automation and intelligent data management within {% collateContent %}Collate{% /collateContent %}{% ossContent %}OpenMetadata{% /ossContent %}

{% tilesContainer %}
{% tile
    title="MCP Server"
    description="Enable AI agent communication with metadata to add context and take intelligent and automated action"
    link="/how-to-guides/mcp"
    icon="discovery"
/%}
{% /tilesContainer %}
## Features in {% collateContent %}Collate{% /collateContent %}{% ossContent %}OpenMetadata{% /ossContent %}

{% collateContent %}Collate{% /collateContent %}{% ossContent %}OpenMetadata{% /ossContent %} is a complete package for data teams to break down team silos, share data assets from multiple sources securely, collaborate around reliable data, and build a documentation-first data culture in the organization.

{% tilesContainer %}
{% collateContent %}
{% tile
    title="SQL Studio"
    description="Execute SELECT queries directly against your database services from a unified interface with secure authentication."
    link="/how-to-guides/sql-studio"
    icon="queryrunner"
/%}
{% /collateContent %}
{% tile
    title="Data Contracts"
    description="Formalize agreements that keep data consumers and producers aligned."
    link="/how-to-guides/data-contracts/"
    icon="discovery"
/%}
{% tile
    title="Data Discovery"
    description="Discover the right data assets to make timely business decisions."
    link="/how-to-guides/data-discovery"
    icon="discovery"
/%}
{% tile
    title="Data Collaboration"
    description="Foster data team collaboration to enhance data understanding."
    link="/how-to-guides/data-collaboration"
    icon="collaboration"
/%}
{% tile
    title="Data Quality & Observability"
    description="Trust your data with quality tests & monitor the health of your data systems."
    link="/how-to-guides/data-quality-observability"
    icon="observability"
/%}
{% tile
    title="Data Lineage"
    description="Trace the path of data across tables, pipelines, and dashboards."
    link="/how-to-guides/data-lineage"
    icon="lineage"
/%}
{% tile
    title="Data Insights"
    description="Define KPIs and set goals to proactively hone the data culture of your company."
    link="/how-to-guides/data-insights"
    icon="discovery"
/%}
{% ossContent %}
{% tile
    title="Data Governance"
    description="Enhance your data platform governance using OpenMetadata."
    link="/how-to-guides/data-governance"
    icon="governance"
/%}
{% /ossContent %}
{% collateContent %}
{% tile
    title="Data Governance"
    description="Enhance your data platform governance using Collate."
    link="/how-to-guides/data-governance"
    icon="governance"
/%}
{% /collateContent %}
{% /tilesContainer %}

## Quick Start Guides

{% tilesContainer %}
{% ossContent %}
{% tile
    title="Admin Guide"
    description="Admin users can get started with OpenMetadata with just three quick and easy steps & know-it-all with the advanced guides."
    link="/how-to-guides/admin-guide"
    icon="administration"
/%}
{% /ossContent %}
{% collateContent %}
{% tile
    title="Admin Guide"
    description="Admin users can get started with Collate with just three quick and easy steps & know-it-all with the advanced guides."
    link="/how-to-guides/admin-guide"
    icon="administration"
/%}
{% /collateContent %}
{% collateContent %}
{% tile
    title="Collate Customer Support"
    description="Explore Collate Support Guides to learn how to open support tickets, manage users, assign roles, and control access in the Collate Portal."
    link="/how-to-guides/collate-customer-support"
    icon="steward"
/%}
{% /collateContent %}
{% ossContent %}
{% tile
    title="Guide for Data Users"
    description="Get to know the basics of OpenMetadata and about the data assets that you can explore in the all-in-one platform."
    link="/how-to-guides/guide-for-data-users"
    icon="steward"
/%}
{% /ossContent %}
{% collateContent %}
{% tile
    title="Guide for Data Users"
    description="Get to know the basics of Collate and about the data assets that you can explore in the all-in-one platform."
    link="/how-to-guides/guide-for-data-users"
    icon="steward"
/%}
{% /collateContent %}
{% /tilesContainer %}

## How {% collateContent %}Collate{% /collateContent %}{% ossContent %}OpenMetadata{% /ossContent %} helps Data Teams?

{% collateContent %}Collate{% /collateContent %}{% ossContent %}OpenMetadata{% /ossContent %} is a complete package for data teams to break down team silos, share data assets from multiple sources securely, collaborate around data, and build a documentation-first data culture in the organization.

{% note %}

- Centralized, **Single Source of Truth** for all your metadata.

- **[Discover](/how-to-guides/data-discovery)** the right assets in time and reduce dependencies.

- Foster **[Team Collaboration](/how-to-guides/data-collaboration)** with conversations, tasks, announcements, and alerts in real time.

- Build trust in your data with **[Data Quality Tests](/how-to-guides/data-quality-observability)** to ensure completeness and accuracy.

- Track your data evolution with end-to-end **[Data Lineage](/how-to-guides/data-lineage)**.

- Secure access to sensitive data by defining **[Roles and Policies](/how-to-guides/admin-guide/roles-policies)**.

- Enhance organizational **[Data Culture](/how-to-guides/data-insights)** to gain crucial insights to drive innovation.

- Define your **[Glossary](/how-to-guides/data-governance/glossary)** to build a common understanding of terms within your organization.

- Implement **[Data Governance](/how-to-guides/data-governance)** to maintain data integrity, security, and compliance.

{% /note %}
